--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dayjs": "^1.10.7",
     "pinia": "^2.0.11",
     "reset-css": "^5.0.1",
     "sort-array": "^4.1.5",
