--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "pinia": "^2.0.11",
     "reset-css": "^5.0.1",
     "sort-array": "^4.1.5",
-    "vue": "^3.2.25"
+    "vue": "^3.2.25",
+    "vue-i18n": "^9.1.9"
   },
   "devDependencies": {
+    "@intlify/vite-plugin-vue-i18n": "^3.3.0",
     "@vitejs/plugin-vue": "^2.2.0",
     "vite": "^2.8.0"
   }
